<resources>
    <string name="app_name">Timetable for HSE FE</string>
    <string name="button1_name">Button1</string>
    <string name="button2_name">Button2</string>
    <string name="main_button_student">Расписание для студентов</string>
    <string name="main_button_teacher">Расписание для преподавателя</string>
    <string name="selectTeacher_text">Выберите преподавателя:</string>
    <string name="selectStudent_text">Выберите группу:</string>
    <string name="dayScheduleButton_text">Расписание на день</string>
    <string name="weekScheduleButton_text">Расписание на неделю</string>
    <string name="now_text">Сейчас: \u0020</string>
    <string name="main_button_settings">Настройки</string>
    <string name="selectPhoto_text">Укажите фото</string>
    <string name="uploadPhoto_text">Сделать фото</string>
    <string name="lightLevel_text">Уровень освещенности:</string>
    <string name="save_text">Сохранить</string>
    <string name="settings_hint_name">Введите ваше имя</string>
    <string name="settings_all_sensors">Все датчики:</string>
    <string name="saved_message">Сохранено</string>
    <string name="ask_photo_permits">Для снятия фото нужно предоставить права на фото</string>
    <string name="status_no_pairs">Нет пар</string>
    <string name="subject_null">Дисциплина</string>
    <string name="cabinet_null">Кабинет</string>
    <string name="corp_null">Корпус</string>
    <string name="teacher_null">Преподаватель</string>
    <string name="status_in_progress">Идет пара</string>

</resources>
