<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/info_box"
        android:stretchColumns="*" >
        <TableRow>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/selectPhoto_text" />

                <ImageView
                    android:id="@+id/userPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:src="@tools:sample/avatars"/>

                <Button
                    android:id="@+id/uploadPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uploadPhoto_text" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/settings_hint_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lightLevel_text"
                    style="@style/HSE.Style.Label"/>

                <TextView
                    android:id="@+id/lightLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_box" />

    <TextView
        android:id="@+id/allSensorsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_all_sensors"
        android:paddingTop="10dp"
        android:layout_margin="10dp"
    app:layout_constraintTop_toBottomOf="@+id/save"
        style="@style/HSE.Style.Label"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        app:layout_constraintTop_toBottomOf="@+id/allSensorsLabel"
        android:id="@+id/allSensors"/>
</androidx.constraintlayout.widget.ConstraintLayout>